tests/functionalTests/valid/code/do.hs
main :: IO ();
main = do {
    putStr "Hello\n";
    putStr "do\n";
    putStr "World\n";
};