tests/functionalTests/invalid/code/badVarId.hs
main :: IO ();
main = do {
    BadId;
};

BadId :: IO ();
BadId = putStr "Hello\n";
